# legacy-etl-compiler

./: .gitignore  README.md  advise.md  discussion.md  etl_compiler.sh  header.html  instructions.txt  pyproject.toml  requirements.txt  run_presentation.sh
bmi_gold_standard/: bmi_pipeline.sps
demo/expected/: results.csv
demo/input/: logic.sps
dev_tmp/: compiler.yaml  logic.sps
docs/: slides.html  slides.qmd  styles.css  system_explanation.html  system_explanation.qmd
docs/system_explanation_files/libs/bootstrap/: bootstrap-62247bb9d43ff715130726f855eb48d9.min.css
output_bmi_pipeline/: data.csv
output_example_pspp_final/: control_values.sav
output_my_logic/: data.csv
src/: compiler.py
tests/: test_system_integration.py
tests/system/: test_components.py  test_data_flow.py  test_environment.py  test_full_chain.py
tests/unit/: test_statemachine_params.py
tmp_sav/: compiler.yaml  logic.sps
tmp_test_project/: compiler.yaml  logic.sps
